# isai-sourcing-pipeline

./: .gitignore  Dockerfile  docker-entrypoint.sh  prefect.yaml  pyproject.toml
scripts/: fit_score.ipynb
src/config/: clients.py  settings.py
src/flows/: attio_push.py  business_processing.py  dealroom_enrichment.py  enrichment.py  full_pipeline.py  website_enrichment.py
src/tasks/: annotate_company_tags.py  attio_push.py  companies_reconciliation.py  compute_founders_values.py  compute_one_pager.py  dealroom_enrichment.py  embed_textual_dimensions.py  retrieve_all_filter_values.py  website_ai_parsing.py  website_crawling.py
src/utils/: db.py  feature_extractor.py  qa_model.py
terraform/: main.tf  terraform.tfvars  variables.tf
terraform/modules/ecr/: main.tf
terraform/modules/ecs/: main.tf
terraform/modules/prefect_automations/: main.tf
terraform/modules/prefect_workpools/: ecs-base-job-template.json.tpl
