[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.uv]
default-groups = ["base"]

[dependency-groups]
base = [
    "cleanco>=2.3",
    "crawl4ai>=0.8.6",
    "fastparquet>=2025.12.0",
    "google-genai>=1.62.0",
    "markdownify>=1.2.2",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "prefect>=3.6.16",
    "pyarrow>=23.0.0",
    "pydantic-settings>=2.12.0",
    "rapidfuzz>=3.14.3",
    "supabase>=2.27.3",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "unidecode>=1.4.0",
]
build = [
    "prefect[docker]>=3.6.16",
]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2"
]
